<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeesDetails">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/employee_details"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/employee_name"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
       app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textDesignation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/employee_designation"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/textDesignationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textNameDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintLeft_toRightOf="@+id/textDesignation"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/employee_age"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textDesignation"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textAgeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textDesignationDetails"
       app:layout_constraintLeft_toRightOf="@+id/textAge"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/employee_number"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textAge"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textNumberDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textAgeDetails"
        app:layout_constraintLeft_toRightOf="@+id/textNumber"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textImageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/employee_image"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textNumber"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/employeeImage"
        android:layout_width="200dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/textNumberDetails"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@+id/textImageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_launcher"/>

</androidx.constraintlayout.widget.ConstraintLayout>